# quartodoc_ex

./: meson.build  pyproject.toml
docs/: _quarto.yml  objects.json
docs/reference/: index.qmd  stochastic.qmd
src/my_package/: meson.build  stochastic.py
